# people_researcher_pydanticai

./: .gitignore  README.md  pyproject.toml
src/people_researcher/: __init__.py  graph.py  nodes.py  prompts.py  state.py
